@@ -1,21 +1,11 @@
-import Vue from 'vue/dist/vue.esm'
+import Vue from "vue/dist/vue.esm"
+import VueDataScooper from "vue-data-scooper"
 
 Vue.config.productionTip = false
+Vue.use(VueDataScooper)
 
 document.addEventListener("DOMContentLoaded", () => {
-  const language = document.querySelector("[v-model='user.language']:checked")
-
   new Vue({
-    el: "#user-form",
-    data: function () {
-      return {
-        user: {
-          name: document.querySelector("[v-model='user.name']").value,
-          language: language ? language.value : undefined,
-          other_language: document
-            .querySelector("[v-model='user.other_language']").value
-        }
-      }
-    }
+    el: "#user-form"
   })
 })
