@@ -31,3 +31,4 @@ tamachi-vue CHANGELOG
 ここでタグ `ver1` をセット。
 
 ## `yarn add vue-data-scooper`
+## `users/form.js` で `Vue.use(VueDataScooper)`
